tests/errors/2006-17.vb
'#compiler-options:/r:
'#compiler-message:Command line error BC2006 : option 'r' requires ':<file_list>'
'#exit-code:1